Testing lint workflow

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -6,8 +6,8 @@
 
   <div class="row">    
     <div class="col-6">
-      <label>GitHub Repository URL:</label>
-      <input [(ngModel)]="githubUrl" id="githubUrl" placeholder="GitHub URL" />
+      <label for="githubUrl">GitHub Repository URL:</label>
+      <input [(ngModel)]="githubUrl" id="githubUrl" name="githubUrl" placeholder="GitHub URL" />
 
     </div>
     <div class="col-6">
