--- a/src/app/app.html
+++ b/src/app/app.html
@@ -5,7 +5,7 @@
     <a class="navbar-brand" href="https://github.com/AggregateNinja/HealthDashboard" target="_blank">GitHub Repository Health Checker</a>
   </div>
 </nav>
-<div class="container mx-auto mt-3">
+<div class="container mx-auto mt-3 mb-3">
   <h3 class="text-center mb-3">Enter the URL for a GitHub repository to check its health rating</h3>
 
   <div class="row g-2 align-items-center">
@@ -31,13 +31,35 @@
     </div>
   </div>
 
-  <div class="row justify-content-md-center mt-3">
-    
+  <div class="row justify-content-md-center mt-3">    
+    <div *ngIf="user" class="col-lg-4 col-md-4 col-sm-12">
+      <h4>User Information: </h4>
+      <ul class="list-group">
+        <li class="list-group-item">
+          Username: {{ user.name }}
+        </li>
+        <li class="list-group-item">
+          Location: {{ user.location }}
+        </li>
+        <li class="list-group-item">
+          Public Repos: {{ user.public_repos }}
+        </li>
+        <li class="list-group-item">
+          Date Joined: {{ user.created_at | date:'MM/dd/yyyy' }}
+        </li>
+      </ul>
+    </div>
+    <div *ngIf="user" class="col-lg-4 col-md-4 col-sm-12">
+      <img src="{{ user.avatar_url }}" alt="Avatar" width="200" height="200">
+    </div>
+  </div>
+
+  <div class="row justify-content-md-center mt-3">    
     <div class="col-lg-4 col-md-4 col-sm-12" *ngIf="fileStatuses">
       <h4>Health Check Criteria: </h4>
       <ul class="list-group">
         <li *ngFor="let f of fileList" class="list-group-item">
-          {{ fileStatuses[f] ? '✅ ' + f + ' Exists' : '❌ ' + f + 'Missing' }}
+          {{ fileStatuses[f] ? '✅ ' + f + ' Exists' : '❌ ' + f + ' Missing' }}
         </li>
         <li *ngIf="hasRecent === true" class="list-group-item">✅ Repo has recent commits in the last 6 months</li>
         <li *ngIf="hasRecent === false" class="list-group-item">❌ Repo has no commits in the last 6 months</li>
@@ -69,34 +91,20 @@
               aria-valuemin="0" aria-valuemax="100">
           </div>
         </div>
-        <small>{{ score | number:'1.0-1' }}/{{ maxScore }}</small>
+        <small [ngClass]="{
+                'ml-0p': score == null || score == 0,
+                'ml-20p': score == 1,
+                'ml-40p': score == 2,
+                'ml-60p': score == 3,
+                'ml-80p': score == 4,
+                'ml-100p': score == 5,
+              }">{{ score | number:'1.0-1' }}/{{ maxScore }}</small>
       </div>
     </div>
   </div>
 
-  <div class="row justify-content-md-center mt-3">    
-    <div *ngIf="user" class="col-lg-4 col-md-4 col-sm-12">
-      <h4>User Information: </h4>
-      <ul class="list-group">
-        <li class="list-group-item">
-          Username: {{ user.name }}
-        </li>
-        <li class="list-group-item">
-          Location: {{ user.location }}
-        </li>
-        <li class="list-group-item">
-          Public Repos: {{ user.public_repos }}
-        </li>
-        <li class="list-group-item">
-          Date Joined: {{ user.created_at }}
-        </li>
-      </ul>
-    </div>
-    <div *ngIf="user" class="col-lg-4 col-md-4 col-sm-12">
-      <img src="{{ user.avatar_url }}" alt="Avatar" width="200" height="200">
-    </div>
-  </div>
+  
 </div>
-<footer class="footer mt-auto text-center py-3">
-  <span class="text-muted">Powered by <a href="https://github.com/AggregateNinja/HealthDashboard" target="_blank">Edward Bossmeyer, Inc.</a>  &copy; {{currYear}} </span>
+<footer class="footer mt-auto text-center py-3 border-top bg-light bg-gradient">
+  <span class="text-muted">Powered by <a href="https://github.com/AggregateNinja/HealthDashboard" target="_blank">Edward Bossmeyer</a>  &copy; {{currYear}} </span>
 </footer>
