--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,6 +8,7 @@
 <div class="container mx-auto mt-3 mb-3">
   <h3 class="text-center mb-3">Enter the URL for a GitHub repository to check its health rating</h3>
 
+  <section #pdfSource class="p-4">
   <div class="row g-2 align-items-center">
     <div class="col-12 col-md-8">
       <div class="input-group">
@@ -31,6 +32,7 @@
     </div>
   </div>
 
+  
   <div class="row justify-content-md-center mt-3">    
     <div *ngIf="user" class="col-lg-4 col-md-4 col-sm-12">
       <h4>User Information: </h4>
@@ -102,7 +104,13 @@
       </div>
     </div>
   </div>
+  </section>
 
+<div class="row justify-content-md-center mt-3">    
+    <div class="col-lg-8 col-md-8 col-sm-12" *ngIf="displayScore">
+      <button (click)="exportAsPdf()" type="button" class="btn btn-success">Download PDF</button>
+    </div>
+</div>
   
 </div>
 <footer class="footer mt-auto text-center py-3 border-top bg-light bg-gradient">
