--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,7 +2,7 @@
 
 <nav class="navbar bg-success" data-bs-theme="light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="https://github.com/AggregateNinja/HealthDashboard" target="_blank">GitHub Repository Health Checker</a>
+    <a class="navbar-brand" href="https://github.com/AggregateNinja/HealthDashboard" target="_blank" data-testid="app-title">{{ title() }}</a>
   </div>
 </nav>
 <div class="container mx-auto mt-3 mb-3">
