Added Download PDF button

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -106,11 +106,11 @@
   </div>
   </section>
 
-<!-- <div class="row justify-content-md-center mt-3">    
+<div class="row justify-content-md-center mt-3">    
     <div class="col-lg-8 col-md-8 col-sm-12" *ngIf="displayScore">
       <button (click)="exportAsPdf()" type="button" class="btn btn-success">Download PDF</button>
     </div>
-</div> -->
+</div>
   
 </div>
 <footer class="footer mt-auto text-center py-3 border-top bg-light bg-gradient">
